--- a/_data/social.yml
+++ b/_data/social.yml
@@ -18,16 +18,16 @@ stack_overflow:
 stack_exchange:
 steam:
 tumblr:
-twitter:
+twitter: @rockhett
 vimeo:
 wordpress:
 youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
-twitch: sirrandoo
+twitch: RockhettSocks
 tiktok:
 
 # Share button options
 share:
-  facebook: true
+  facebook: 
   twitter: true
   tumblr:
   pinterest:
