--- a/_data/social.yml
+++ b/_data/social.yml
@@ -22,7 +22,7 @@ twitter: @rockhett
 vimeo:
 wordpress:
 youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
-twitch: RockhettSocks
+twitch: Rockhettsocks
 tiktok:
 
 # Share button options
