--- a/_data/social.yml
+++ b/_data/social.yml
@@ -18,7 +18,7 @@ stack_overflow:
 stack_exchange:
 steam:
 tumblr:
-twitter: @rockhett
+twitter: rockhett
 vimeo:
 wordpress:
 youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
